# CS-499_Portfolio

./: CR.md  README.md  _config.yml
assets/: style.css
enhanced_code/DB_cs340_animal_finder/: DB.md  README.md  animal_finder.py  animal_finder_test.py  docker-compose.yaml  requirements.txt  server.py
enhanced_code/DB_cs340_animal_finder/templates/: index.html
enhanced_code/DSALGO_cs260_binary_search_tree/: ADS.md  README.md
enhanced_code/DSALGO_cs260_binary_search_tree/src/: BinarySearchTree.cpp  CSVparser.cpp  CSVparser.hpp  main.cpp
enhanced_code/SDE_it245_zoo_auth/: README.md  SDE.md
enhanced_code/SDE_it245_zoo_auth/Authentication/: Cawley_Larry ZooAuth Documentation.docx
enhanced_code/SDE_it245_zoo_auth/Authentication/src/authentication/: MD5Digest.java
enhanced_code/SDE_it245_zoo_auth/main/java/com/lcawley/authentication/: Authentication.java  MD5Digest.java
enhanced_code/SDE_it245_zoo_auth/test/java/com/lcawley/authentication/: AuthenticationTest.java
enhanced_code/cs260_binary_search_tree/: CMakeLists.txt  testBids.csv
enhanced_code/cs260_binary_search_tree/src/: BinarySearchTree.h
enhanced_code/cs340_animal_finder/: animal_finder_test.ipynb  init-mongo.js
enhanced_code/it245_zoo_auth/: flow.drawio
enhanced_code/it245_zoo_auth/Authentication/src/authentication/: Authentication.java  UserRole.java
original_code/DB_cs340_animal_finder/: README.md
original_code/cs260_binary_search_tree/: Lab2-1.cpp
